src/parse/smcat/smcat-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { program: peg$parseprogram },
      peg$startRuleFunction  = peg$parseprogram,

      peg$c0 = function(statemachine) {
              statemachine.states = parserHelpers.extractUndeclaredStates(statemachine);
              return parserHelpers.classifyForkJoins(statemachine);
          },
      peg$c1 = peg$otherExpectation("statemachine"),
      peg$c2 = function(states, transitions) {
              let lStateMachine = {};
              parserHelpers.setIf(lStateMachine, 'states', states);
              parserHelpers.setIfNotEmpty(lStateMachine, 'transitions', transitions);

              return lStateMachine;
            },
      peg$c3 = ",",
      peg$c4 = peg$literalExpectation(",", false),
      peg$c5 = function(state) {return state},
      peg$c6 = ";",
      peg$c7 = peg$literalExpectation(";", false),
      peg$c8 = function(states) {
            return parserHelpers.uniq(states[0].concat(states[1]), parserHelpers.stateEqual);
          },
      peg$c9 = peg$otherExpectation("state"),
      peg$c10 = "[",
      peg$c11 = peg$literalExpectation("[", false),
      peg$c12 = "]",
      peg$c13 = peg$literalExpectation("]", false),
      peg$c14 = function(notes, id, attrs) {return attrs},
      peg$c15 = ":",
      peg$c16 = peg$literalExpectation(":", false),
      peg$c17 = function(notes, id, extended_state_attributes, act) {return act},
      peg$c18 = "{",
      peg$c19 = peg$literalExpectation("{", false),
      peg$c20 = "}",
      peg$c21 = peg$literalExpectation("}", false),
      peg$c22 = function(notes, id, extended_state_attributes, actions, sm) {return sm;},
      peg$c23 = function(notes, id, extended_state_attributes, actions, statemachine) {
                let lState = parserHelpers.initState(id);
                (extended_state_attributes || []).forEach(
                  pExtendedAttribute => parserHelpers.setIf(lState, pExtendedAttribute.name, pExtendedAttribute.value)
                );
                parserHelpers.setIf(lState, 'typeExplicitlySet', (extended_state_attributes || []).some(pExtendedAttribute => pExtendedAttribute.typeExplicitlySet));
                parserHelpers.setIf(lState, 'statemachine', statemachine);
                parserHelpers.setIfNotEmpty(lState, 'note', notes);

                if (Boolean(actions)) {
                  parserHelpers.setIfNotEmpty(
                      lState,
                      'actions',
                      parserHelpers.extractActions(actions)
                  );
                }

                return lState;
              },
      peg$c24 = peg$otherExpectation("extended state attributes"),
      peg$c25 = peg$otherExpectation("extended state attribute"),
      peg$c26 = "=",
      peg$c27 = peg$literalExpectation("=", false),
      peg$c28 = function(name, value) {
              return {name, value};
          },
      peg$c29 = function(name) {
              return {name, value:true}
          },
      peg$c30 = function(name, value) {
              return {name, value, typeExplicitlySet:true}
          },
      peg$c31 = peg$otherExpectation("state attribute name"),
      peg$c32 = "label",
      peg$c33 = peg$literalExpectation("label", true),
      peg$c34 = "color",
      peg$c35 = peg$literalExpectation("color", true),
      peg$c36 = function(name) {
              return name.toLowerCase();
          },
      peg$c37 = peg$otherExpectation("state flag"),
      peg$c38 = "active",
      peg$c39 = peg$literalExpectation("active", true),
      peg$c40 = peg$otherExpectation("state type"),
      peg$c41 = "type",
      peg$c42 = peg$literalExpectation("type", true),
      peg$c43 = peg$otherExpectation("state type type"),
      peg$c44 = "regular",
      peg$c45 = peg$literalExpectation("regular", false),
      peg$c46 = "initial",
      peg$c47 = peg$literalExpectation("initial", false),
      peg$c48 = "terminate",
      peg$c49 = peg$literalExpectation("terminate", false),
      peg$c50 = "final",
      peg$c51 = peg$literalExpectation("final", false),
      peg$c52 = "parallel",
      peg$c53 = peg$literalExpectation("parallel", false),
      peg$c54 = "history",
      peg$c55 = peg$literalExpectation("history", false),
      peg$c56 = "deephistory",
      peg$c57 = peg$literalExpectation("deephistory", false),
      peg$c58 = "choice",
      peg$c59 = peg$literalExpectation("choice", false),
      peg$c60 = "forkjoin",
      peg$c61 = peg$literalExpectation("forkjoin", false),
      peg$c62 = "fork",
      peg$c63 = peg$literalExpectation("fork", false),
      peg$c64 = "join",
      peg$c65 = peg$literalExpectation("join", false),
      peg$c66 = "junction",
      peg$c67 = peg$literalExpectation("junction", false),
      peg$c68 = peg$otherExpectation("transition"),
      peg$c69 = function(notes, trans, attrs) {return attrs},
      peg$c70 = function(notes, trans, extended_attributes, lbl) {return lbl},
      peg$c71 = function(notes, trans, extended_attributes, label) {
            if (label) {
                trans.label = label;
                trans = Object.assign(
                    trans,
                    parserHelpers.parseTransitionExpression(label)
                );
            }
            (extended_attributes || []).forEach(
                pExtendedAttribute => parserHelpers.setIf(trans, pExtendedAttribute.name, pExtendedAttribute.value)
            );
            parserHelpers.setIfNotEmpty(trans, 'note', notes);

            return trans;
          },
      peg$c72 = function(from, to) {
                    return {
                        from: from,
                        to: to
                    }
                },
      peg$c73 = function(to, from) {
                return {
                    from: from,
                    to: to
                }
            },
      peg$c74 = peg$otherExpectation("extended transition attributes"),
      peg$c75 = peg$otherExpectation("extended transition attribute"),
      peg$c76 = peg$otherExpectation("transition attribute name"),
      peg$c77 = peg$otherExpectation("left to right arrow"),
      peg$c78 = "->",
      peg$c79 = peg$literalExpectation("->", false),
      peg$c80 = "=>>",
      peg$c81 = peg$literalExpectation("=>>", false),
      peg$c82 = "=>",
      peg$c83 = peg$literalExpectation("=>", false),
      peg$c84 = ">>",
      peg$c85 = peg$literalExpectation(">>", false),
      peg$c86 = ":>",
      peg$c87 = peg$literalExpectation(":>", false),
      peg$c88 = "--",
      peg$c89 = peg$literalExpectation("--", false),
      peg$c90 = "==",
      peg$c91 = peg$literalExpectation("==", false),
      peg$c92 = peg$otherExpectation("right to left arrow"),
      peg$c93 = "<-",
      peg$c94 = peg$literalExpectation("<-", false),
      peg$c95 = "<<=",
      peg$c96 = peg$literalExpectation("<<=", false),
      peg$c97 = "<=",
      peg$c98 = peg$literalExpectation("<=", false),
      peg$c99 = "<<",
      peg$c100 = peg$literalExpectation("<<", false),
      peg$c101 = "<:",
      peg$c102 = peg$literalExpectation("<:", false),
      peg$c103 = "#",
      peg$c104 = peg$literalExpectation("#", false),
      peg$c105 = function(com) {
            return com.join("").trim()
          },
      peg$c106 = peg$otherExpectation("double quoted string"),
      peg$c107 = "\"",
      peg$c108 = peg$literalExpectation("\"", false),
      peg$c109 = function(s) {return s.join("")},
      peg$c110 = "\\\"",
      peg$c111 = peg$literalExpectation("\\\"", false),
      peg$c112 = peg$anyExpectation(),
      peg$c113 = function(c) {return c},
      peg$c114 = function(s) {return s.join("").trim()},
      peg$c115 = peg$otherExpectation("identifier"),
      peg$c116 = /^[^;, "\t\n\r=\-><:{[]/,
      peg$c117 = peg$classExpectation([";", ",", " ", "\"", "\t", "\n", "\r", "=", "-", ">", "<", ":", "{", "["], true, false),
      peg$c118 = function(chars) {return chars.join("")},
      peg$c119 = peg$otherExpectation("whitespace"),
      peg$c120 = /^[ \t]/,
      peg$c121 = peg$classExpectation([" ", "\t"], false, false),
      peg$c122 = peg$otherExpectation("line end"),
      peg$c123 = /^[\r\n]/,
      peg$c124 = peg$classExpectation(["\r", "\n"], false, false),
      peg$c125 = "/*",
      peg$c126 = peg$literalExpectation("/*", false),
      peg$c127 = "*/",
      peg$c128 = peg$literalExpectation("*/", false),
      peg$c129 = function(start, com, end) {
            return start + com.join("") + end
          },
      peg$c130 = "//",
      peg$c131 = peg$literalExpectation("//", false),
      peg$c132 = /^[^\r\n]/,
      peg$c133 = peg$classExpectation(["\r", "\n"], true, false),
      peg$c134 = function(start, com) {
            return start + com.join("")
          },
      peg$c135 = peg$otherExpectation("comment"),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsestatemachine();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatemachine() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsestates();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsetransition();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsetransition();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parsestates() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parsestate();
    if (s4 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 44) {
        s5 = peg$c3;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s5 !== peg$FAILED) {
        peg$savedPos = s3;
        s4 = peg$c5(s4);
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parsestate();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c3;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c5(s4);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      s4 = peg$parsestate();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s5 = peg$c6;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c5(s4);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c8(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsestate() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsenote();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsenote();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseidentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 91) {
              s6 = peg$c10;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseextended_state_attributes();
              if (s7 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 93) {
                  s8 = peg$c12;
                  peg$currPos++;
                } else {
                  s8 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c13); }
                }
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s6 = peg$c14(s1, s3, s7);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 58) {
                  s8 = peg$c15;
                  peg$currPos++;
                } else {
                  s8 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c16); }
                }
                if (s8 !== peg$FAILED) {
                  s9 = peg$parse_();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parsestring();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parse_();
                      if (s11 !== peg$FAILED) {
                        peg$savedPos = s7;
                        s8 = peg$c17(s1, s3, s5, s10);
                        s7 = s8;
                      } else {
                        peg$currPos = s7;
                        s7 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 123) {
                      s10 = peg$c18;
                      peg$currPos++;
                    } else {
                      s10 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c19); }
                    }
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parse_();
                      if (s11 !== peg$FAILED) {
                        s12 = peg$parsestatemachine();
                        if (s12 !== peg$FAILED) {
                          s13 = peg$parse_();
                          if (s13 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 125) {
                              s14 = peg$c20;
                              peg$currPos++;
                            } else {
                              s14 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c21); }
                            }
                            if (s14 !== peg$FAILED) {
                              peg$savedPos = s9;
                              s10 = peg$c22(s1, s3, s5, s7, s12);
                              s9 = s10;
                            } else {
                              peg$currPos = s9;
                              s9 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s9;
                            s9 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s9;
                          s9 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s9;
                        s9 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c23(s1, s3, s5, s7, s9);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }

    return s0;
  }

  function peg$parseextended_state_attributes() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = peg$parseextended_state_attribute();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseextended_state_attribute();
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c24); }
    }

    return s0;
  }

  function peg$parseextended_state_attribute() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
